# se-toolkit-lab-8

./: .gitignore  REPORT.md  docker-compose.yml  flake.nix
.agents/skills/cron/: SKILL.md
.agents/skills/observability/: SKILL.md
backend/: Dockerfile
backend/app/db/: items.py
backend/app/routers/: items.py
caddy/: Caddyfile
mcp/: pyproject.toml
mcp/mcp_lms/: client.py  server.py
mcp/mcp_observability/: __init__.py  __main__.py  server.py
nanobot/: Dockerfile  config.json  entrypoint.py  main.py  pyproject.toml
nanobot/workspace/: AGENTS.md  TOOLS.md  USER.md
nanobot/workspace/sessions/: cli_direct.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
otel-collector/: config.yaml
