[project]
name = "nanobot"
version = "0.1.0"
description = "Nanobot agent with LMS and observability tools"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lms-mcp",
    "nanobot-webchat",
]

[tool.uv.sources]
lms-mcp = { path = "../mcp" }
nanobot-webchat = { path = "../nanobot-websocket-channel/nanobot-webchat" }
